
 * The "Agentlogin" and "Agentlogoff" events have been renamed "AgentLogin" and
   "AgentLogoff" respectively.

 * The "Channel" key used in the "AlarmClear", "Alarm", and "DNDState" has been
   renamed "DAHDIChannel" since it does not convey an Asterisk channel name.

 * "ChannelUpdate" events have been removed.

 * AMI events now contain a SystemName field, if available.

AGI (Asterisk Gateway Interface)
------------------
 * The manager event AGIExec has been split into AGIExecStart and AGIExecEnd.

 * The manager event AsyncAGI has been split into AsyncAGIStart, AsyncAGIExec,
   and AsyncAGIEnd.

CDR (Call Detail Records)
------------------
 * Significant changes have been made to the behavior of CDRs. For a full
   definition of CDR behavior in Asterisk 12, please read the specification
   on the Asterisk wiki (wiki.asterisk.org).

 * CDRs will now be created between all participants in a bridge. For each
   pair of channels in a bridge, a CDR is created to represent the path of
   communication between those two endpoints. This lets an end user choose who
   to bill for what during bridge operations with multiple parties.

 * The duration, billsec, start, answer, and end times now reflect the times
   associated with the current CDR for the channel, as opposed to a cumulative
   measurement of all CDRs for that channel.

 * When a CDR is dispatched, user defined CDR variables from both parties are
   included in the resulting CDR. If both parties have the same variable, only
   the Party A value is provided.

Features
-------------------
 * The BRIDGE_FEATURES channel variable would previously only set features for
   the calling party and would set this feature regardless of whether the
   feature was in caps or in lowercase. Use of a caps feature for a letter
   will now apply the feature to the calling party while use of a lowercase
   letter will apply that feature to the called party.
